@@ -5,6 +5,8 @@ Version 3.1-2
  o Modified internal function make.ticks() so that it doesn't fail due to floating-point inaccuracy (following error reported by Joe Clayton Ford).
  
  o Check formula for presence of factor(), etc. (suggestion of Ulrike Gromping).
+ 
+ o Fixed bug in Effect.clm() and some other methods (reported by David Barron), which didn't pass ... argument.
 
 Version 3.1-1
 
